added legal documents and updated sin stuff

--- a/content/posts/2019-03-02-authors.md
+++ b/content/posts/2019-03-02-authors.md
@@ -6,6 +6,7 @@ tags:
     - getting-started
     - content
 cover:
+draft: true
 ---
 
 Just like with tags, you can also organise your posts by author.
