--- a/content/posts/2019-03-02-tags.md
+++ b/content/posts/2019-03-02-tags.md
@@ -4,6 +4,7 @@ description: "Using the tags taxonomy, defined as a collection in Gridsome, to c
 slug: organise-content-tags
 date: 2019-02-26 16:44:21
 author: gridsome
+draft: true
 ---
 
 Tags in Bleda are defined in your posts's Front matter.
